# tsuyu-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Program.cs  README.md  appsettings.json  tsuyu.sln
.cargo/: config.toml
Controllers/: SettingsController.cs  UserController.cs
Models/: CurrentSettings.cs  User.cs
Models/Request/: PasswordUpdate.cs  QueryResponse.cs  Response.cs
Services/: ConfigurationService.cs  Database.cs  FileService.cs
api/: Cargo.toml
api/src/: account.rs  config.rs  db.rs  main.rs  rejections.rs  routes.rs
public/: asset-manifest.json  index.html
public/static/css/: main.2097dc4e.chunk.css  main.2097dc4e.chunk.css.map  (+2 more)
src/: account.rs  config.rs  db.rs  main.rs  rejections.rs  routes.rs
tsuyu/: Dockerfile  ErrorHandlingMiddleware.cs  Extensions.cs  Program.cs  tsuyu.csproj
tsuyu.Tests/: GlobalUsings.cs  tsuyu.Tests.csproj
tsuyu.Tests/Controllers/: FileControllerTests.cs  SettingsControllerTests.cs  UserControllerTests.cs
tsuyu/Controllers/: Base.cs  FileController.cs  SettingsController.cs  UserController.cs
tsuyu/Migrations/: 20240122210000_CreateTables.cs  20240122214500_AutomaticDates.cs
tsuyu/Models/: UploadedFile.cs  User.cs
tsuyu/Properties/: launchSettings.json
tsuyu/Services/: ConfigurationService.cs  Database.cs  FileService.cs  IConfigurationService.cs  IDatabase.cs  IFileService.cs
tsuyu/public/: asset-manifest.json  index.html
web/: .env  .env.development  .eslintcache  package.json  tsconfig.json
web/public/: index.html  manifest.json
web/src/: App.tsx  Router.tsx  index.scss  storage.ts
(+55 files in other folders)
