[package]
name = "tsuyu"
version = "0.1.0"
authors = ["Filip <filip.ekstrom98@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
warp = "0.2.3"
futures = { version = "=0.3.5", default-features = false }
bytes = "0.5.6"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "mysql", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.8"
anyhow = "1.0"
rand = "0.7.3"